fix overflow of body

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow: hidden;
+}
+
 html,
 body,
 div,
